bug patch & content

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -16,12 +16,12 @@
     <body>
     <header>
         <h1>LoveTeller</h1>
-        <p>Recevez chaque jour un message d'amour de vos proches ❤️</p>
+        <p>❤️</p>
     </header>
         {% block body %}{% endblock %}
     <footer>
         <p>&copy; {{ "now"|date("Y") }} LoveTeller. Tous droits réservés.</p>
-        <p>Partagez l'amour, un message à la fois.</p>
+        <p>Site entièrement réalisé à la main pour toi</p>
     </footer>
     </body>
 </html>
